dataset1235/2025-2/2868285114/users/1527706029/executions/2135592949_1467685783.log
== SUBMISSION (2025-08-12 23:02:51)
-- CODE: 
print (*700)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:01:27)
-- CODE: 
print *700
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print *700
    ~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print *700
    ~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:01:42)
-- CODE: 
print (*700)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:02:00)
-- CODE: 
print (*75)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*75)
TypeError: print() argument after * must be an iterable, not int
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*75)
TypeError: print() argument after * must be an iterable, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:02:10)
-- CODE: 
print (*700)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:06:38)
-- CODE: 
print(round(*35))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(*35))
          ^^^^^^^^^^
TypeError: round() argument after * must be an iterable, not int
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(*35))
          ^^^^^^^^^^
TypeError: round() argument after * must be an iterable, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:08:28)
-- CODE: 
print (20*35)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:01:44)
-- CODE: 
print (*700)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:06:53)
-- CODE: 
print (35*)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print (35*)
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print (35*)
              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:04:57)
-- CODE: 
print (35*20=700)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print (35*20=700)
           ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print (35*20=700)
           ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:03:15)
-- CODE: 
print (*700)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (*700)
TypeError: print() argument after * must be an iterable, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
